<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PoiDetails">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/guatape2" />

        <TextView
            android:id="@+id/city"
            android:layout_width="210dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/city"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/descripcion1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <TextView
            android:id="@+id/description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/descripcion2"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <Button
            android:id="@+id/ver_mas"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textoboton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description2"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/location_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ubicacion"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/temperature_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ver_mas" />

        <TextView
            android:id="@+id/location_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/localizacion"
            app:layout_constraintLeft_toRightOf="@+id/location_key"
            app:layout_constraintTop_toBottomOf="@+id/ver_mas" />

        <TextView
            android:id="@+id/temperature_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/temperatura"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_key" />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="132dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/grados"
            app:layout_constraintLeft_toRightOf="@+id/temperature_key"
            app:layout_constraintStart_toEndOf="@+id/temperature_key"
            app:layout_constraintTop_toBottomOf="@+id/location_value" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/mapa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:text="@string/mas_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recomendados"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_key" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/lista"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
